--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ import '@fontsource-variable/work-sans';
 interface Props {
 	title: string;
 }
-
+import '@/styles/globals.css'
 const { title } = Astro.props;
 ---
 
@@ -16,13 +16,12 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="bg-primary">
 		<slot />
 	</body>
 </html>
 <style is:global>
 	html {
 		font-family: 'Work Sans Variable',system-ui, sans-serif;
-		background: #333;
 	}
 </style>
